--- a/FirebaseCourseProject/app/build.gradle
+++ b/FirebaseCourseProject/app/build.gradle
@@ -47,3 +47,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     // ***********************************************************************
 }
+
+apply plugin: 'com.google.gms.google-services'
