--- a/FirebaseCourseProject/app/build.gradle
+++ b/FirebaseCourseProject/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     // ***********************************************************************
     compile 'com.android.support:design:26.1.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.google.firebase:firebase-database:11.6.0'
     // ***********************************************************************
 }
 
