--- a/FriendlyChat/app/build.gradle
+++ b/FriendlyChat/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
     compile 'com.google.firebase:firebase-database:11.4.2'
     compile 'com.google.firebase:firebase-auth:11.4.2'
+    compile 'com.google.firebase:firebase-storage:11.4.2'
+
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
