--- a/FriendlyChat/app/build.gradle
+++ b/FriendlyChat/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.4.2'
     compile 'com.google.firebase:firebase-auth:11.4.2'
     compile 'com.google.firebase:firebase-storage:11.4.2'
+    compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.firebase:firebase-jobdispatcher:0.6.0' // added for notifications
 
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
 }
